updated kernelspec: functions

--- a/functions/functions.ipynb
+++ b/functions/functions.ipynb
@@ -198,14 +198,10 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'mpmath'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[6], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmpmath\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mmp\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m# specify the number of digits we want\u001b[39;00m\n\u001b[1;32m      4\u001b[0m mp\u001b[38;5;241m.\u001b[39mmp\u001b[38;5;241m.\u001b[39mdps \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m30\u001b[39m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'mpmath'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.866025403784438646763723170753 0.5\n"
      ]
     }
    ],
@@ -252,10 +248,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "5b1c54f6-2b0c-497a-b1bc-79b8c65cc8be",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.288037795340032\n",
+      "37.47841760435743\n"
+     ]
+    }
+   ],
    "source": [
     "from scipy.special import gamma, hermite\n",
     "\n",
@@ -282,10 +287,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "4959c777-50da-46a0-96ee-a0f5b10fdf57",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "37.4784176043574313974648540446\n"
+     ]
+    }
+   ],
    "source": [
     "from mpmath import hermite\n",
     "\n",
@@ -305,9 +318,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "jbook",
+   "display_name": "book",
    "language": "python",
-   "name": "jbook"
+   "name": "book"
   },
   "language_info": {
    "codemirror_mode": {
@@ -319,7 +332,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
