--- a/numbers/integers.ipynb
+++ b/numbers/integers.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "cce765ec-f9b9-4754-a92e-c2f4686054d7",
    "metadata": {},
    "outputs": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "id": "ecb0eca0-57a9-405a-ba33-e878b170aef9",
    "metadata": {
     "tags": []
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "a4ce473c-8d73-4ca8-b0a1-23be997b25da",
    "metadata": {},
    "outputs": [
@@ -168,9 +168,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "book",
    "language": "python",
-   "name": "python3"
+   "name": "book"
   },
   "language_info": {
    "codemirror_mode": {
@@ -182,7 +182,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
