--- a/root-finding/root_bisection.ipynb
+++ b/root-finding/root_bisection.ipynb
@@ -346,9 +346,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "jbook",
+   "display_name": "book",
    "language": "python",
-   "name": "jbook"
+   "name": "book"
   },
   "language_info": {
    "codemirror_mode": {
@@ -360,7 +360,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
