--- a/root-finding/root_polynomials.ipynb
+++ b/root-finding/root_polynomials.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "a6baa0a0-8c01-4367-b374-8712f274304f",
    "metadata": {},
    "outputs": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "364f1dc6-bfb7-4f32-b728-b3c38c863a00",
    "metadata": {},
    "outputs": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "97caaba3-094c-4389-bdc8-5f74a12386cc",
    "metadata": {},
    "outputs": [
@@ -134,9 +134,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "jbook",
+   "display_name": "book",
    "language": "python",
-   "name": "jbook"
+   "name": "book"
   },
   "language_info": {
    "codemirror_mode": {
@@ -148,7 +148,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
